Criado rotas LOGIN e CADASTRO, e sessão funcionando

--- a/Financias/package.json
+++ b/Financias/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express-load": "^1.1.15"
+    "express-load": "^1.1.15",
+    "express-session": "^1.15.1"
   }
 }
